 bugfixes on unfinished code...
#33  July 20, 1998
 intermediate version
#34  July 24, 1998
 Pataki I. and Vincze G.' stuff
#34a-#38
 TOTAL REWRITE!!!
 internal data structure redesigned
 .gnd file format change (incompatible!)
 redesigned user interface
 arrow.cc rewritten
 display string format change:"p=m,50,50,50,50"
 ported to Windows (Borland C++ 5.0 project file included)
#39  Aug 28, 1998
 - first beta version. Still badly misses the capability of loading
   NED files directly!
#40  Aug 30, 1998
 - Second beta
#41  Dec 30, 1998
 - makefile renamed to makefile.in
 - bug with delete ('X') toolbar icon fixed
 - changes in the About box
#42  Sept 1998 - March 1999
 DEVELOPMENT VERSIONS:
 - Pataki Istvan and Vincze Gabor -- added the parser and a manager, .gnd files
   thrown out
#43-45b  March 1999 - April 1999
 DEVELOPMENT VERSIONS
 - parser and code generation rewritten
 - data structures redesigned
 - made two-way tool
 - user interface redesigned: place manager at left, toolbar icons, tooltips etc.
#46  May 1 1999
 GNED 1.2 ALPHA 1 released
#47 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
July 11, 1999
  - small fixes and enhancements
July 17, 1999
  - fixed the bug with scrolled canvas
  - resizeBar implemented in widgets.tcl -- should be updated in Tkenv and Plove too!
Aug 2, 1999
  - OMNETPP_BITMAP_PATH turned into real path (a list of directories). The
    separator char is ";" on Windows, and ":" or ";" on Unix.
Aug 11, 1999
  - changed widget.tcl -- must be updated elsewhere!
Aug 15, 1999
  - fixed bugs in nedfile.cc (lines 86,91,92 contained "==" instead of "=")
Aug 18, 1999
  - initial version of syntax highlight implemented
Aug 26, 1999
  - find/replace dialogs added
Aug 28, 1999
  - ddfields() array introduced for performance reasons
Aug 30, 1999
  - status bar added for text editor
------ omnetpp-2.0b2 released ------