@@ -147,3 +147,5 @@ Aug 28, 1999
 Aug 30, 1999
   - status bar added for text editor
 ------ omnetpp-2.0b2 released ------
+Oct 11, 1999
+  - fixed problem with resizing parent module
